k8s/base/videorenderworker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-render-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-render-worker
  template:
    metadata:
      labels:
        app: video-render-worker
    spec:
      containers:
        - name: video-render-worker
          image: onlinevideoeditor.azurecr.io/video_render_worker:latest
